Shift to new method of fitting using lmfit Model class

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 *$py.class
 
 # Jupyter Notebook
-*/.ipynb_checkpoints
-*/.ipynb_checkpoints/
+**/.ipynb_checkpoints
+**/.ipynb_checkpoints/
 
 # IPython
 profile_default/
@@ -18,5 +18,5 @@ ipython_config.py
 # Shortucts
 *.lnk
 
-# Date Folder
-/data/*
+# Data Folder
+data/*
